[package]
name = "claude-dind"
version = "0.1.0"
edition = "2024"
description = "Run Claude Code in a Docker container with host Docker socket access using OAuth credentials extracted from the macOS Keychain"
license = "MIT"
repository = "https://github.com/G-structure/claude-dind"

[[bin]]
name = "claude-dind"
path = "src/main.rs"

[dependencies]
# Error handling with context chains (e.g., "Failed to execute security command: No such file")
anyhow = "1"
# CLI argument parsing with derive macros — generates --help, validation, etc. from struct fields
clap = { version = "4", features = ["derive"] }
# Terminal event handling for the TUI multiplexer
crossterm = "0.28"
# TUI framework for rendering the multiplexer interface
ratatui = "0.29"
# JSON serialization framework
serde = { version = "1", features = ["derive"] }
# JSON parsing for validating the credential blob structure before piping it to Docker
serde_json = "1"
# Headless terminal emulation for wrapping docker exec sessions
shadow-terminal = { path = "extern/shadow-terminal/shadow-terminal" }
# Re-export of termwiz from shadow-terminal for Surface types
termwiz = { package = "tattoy-termwiz", version = "=0.24.0-fork.2", features = ["use_serde"] }
# Async runtime for shadow-terminal and the TUI event loop
tokio = { version = "1", features = ["full"] }
# Reverse SOCKS5 tunnel for remote loom sessions (gwp)
gh-worker-proxy = { path = "extern/gh-worker-proxy" }
# TLS for gwp tunnel
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# Self-signed cert generation for gwp
rcgen = "0.14"
# Stream multiplexer for gwp tunnel
yamux = "0.13"
# Trait bridging between tokio and futures IO
tokio-util = { version = "0.7", features = ["compat"] }
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Random token generation
rand = "0.8"
# SHA-256 fingerprint computation
sha2 = "0.10"
# Hex encoding for fingerprints and tokens
hex = "0.4"
# Futures combinators for yamux stream handling
futures = "0.3"
# WebSocket relay support
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
